# docs/swagger.yaml
@@ -259,6 +259,52 @@ paths:
       summary: 分页查询阶段性测验成绩
       tags:
         - 阶段性测验成绩
+  /sourceStage/update:
+    post:
+      consumes:
+        - multipart/form-data
+      description: 更新阶段性测验成绩
+      parameters:
+        - description: Token
+          in: header
+          name: Authorization
+          required: true
+          type: string
+        - description: 学生名字
+          in: formData
+          name: name
+          type: string
+        - description: 学生学号
+          in: formData
+          name: studentId
+          required: true
+          type: string
+        - description: 教学班号
+          in: formData
+          name: teachingClassId
+          type: string
+        - description: 阶段性测验id
+          in: formData
+          name: sourceStageId
+          type: string
+        - description: 成绩注释
+          in: formData
+          name: scoresNote
+          type: string
+        - description: 成绩
+          in: formData
+          name: scores
+          type: string
+      produces:
+        - application/json
+      responses:
+        "200":
+          description: '{"status": 1}'
+          schema:
+            type: string
+      summary: 更新阶段性测验成绩
+      tags:
+        - 阶段性测验成绩
   /sourceStage/updates:
     post:
       consumes:
@@ -1062,6 +1108,82 @@ paths:
           schema:
             type: string
       summary: 更新教学班信息学生记录
+      tags:
+        - 教学班信息
+  /teachingClass/updateFinal:
+    post:
+      consumes:
+        - application/json
+      description: 更新成绩信息
+      parameters:
+        - description: Token
+          in: header
+          name: Authorization
+          required: true
+          type: string
+        - description: 查询页码
+          in: formData
+          name: pageNum
+          required: true
+          type: string
+        - description: 每页条数
+          in: formData
+          name: pageSize
+          required: true
+          type: string
+        - description: 学生学号
+          in: formData
+          name: studentId
+          required: true
+          type: string
+        - description: 姓名
+          in: formData
+          name: name
+          type: string
+        - description: 所在年级
+          in: formData
+          name: grade
+          type: string
+        - description: 所在学院或部门
+          in: formData
+          name: department
+          type: string
+        - description: 所在专业
+          in: formData
+          name: professional
+          type: string
+        - description: 所在班级
+          in: formData
+          name: class
+          type: string
+        - description: 课程名称
+          in: formData
+          name: courseName
+          type: string
+        - description: 课程id
+          in: formData
+          name: courseId
+          type: string
+        - description: 教学班号
+          in: formData
+          name: teachingClassId
+          type: string
+        - description: 任课老师名字
+          in: formData
+          name: courseTeacherName
+          type: string
+        - description: 任课老师id
+          in: formData
+          name: courseTeacherId
+          type: string
+      produces:
+        - application/json
+      responses:
+        "200":
+          description: '{"status": 1}'
+          schema:
+            type: string
+      summary: 更新成绩信息
       tags:
         - 教学班信息
   /teachingClass/upload:
